# ltma-nsis

./: .gitignore  README.md
backend/: app.py  requirements.txt  tray_app.py
frontend/: index.html
frontend/config/: positions.js
frontend/css/: style.css
frontend/js/: app.js
plugin/: CMakeLists.txt
plugin/src/: plugin.cpp
